--- a/feline-market-nestjs/.gitignore
+++ b/feline-market-nestjs/.gitignore
@@ -36,7 +36,7 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env
+.env.local
 .env.development.local
 .env.test.local
 .env.production.local
